# HackSysExtremeVulnerableDriver

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml
Driver/: ArbitraryOverwrite.c  ArbitraryOverwrite.h  CMakeLists.txt  Common.h  DoubleFetch.c  DoubleFetch.h  HEVD.sln  HackSysExtremeVulnerableDriver.Win32.vddklaunch  HackSysExtremeVulnerableDriver.c  HackSysExtremeVulnerableDriver.h  HackSysExtremeVulnerableDriver.sln  HackSysExtremeVulnerableDriver.vcxproj  HackSysExtremeVulnerableDriver.vcxproj.filters  InsecureKernelResourceAccess.c  InsecureKernelResourceAccess.h  IntegerOverflow.c  IntegerOverflow.h  MemoryDisclosure.c  MemoryDisclosure.h  NonPagedPoolOverflow.c  NonPagedPoolOverflow.h  NullPointerDereference.c  NullPointerDereference.h  PagedPoolSessionOverflow.c  PagedPoolSessionOverflow.h  PoolOverflow.c  PoolOverflow.h  StackOverflow.c  StackOverflow.h  StackOverflowGS.c  StackOverflowGS.h  TypeConfusion.c  TypeConfusion.h  UninitializedHeapVariable.c  UninitializedHeapVariable.h  UseAfterFree.c  UseAfterFree.h  WriteNULL.c  WriteNULL.h  sources
Driver/CMake/: DetectOS.cmake  LKM.cmake  WDK.cmake
Driver/HEVD/: ArbitraryReadWriteHelperNonPagedPoolNx.c  ArbitraryReadWriteHelperNonPagedPoolNx.h  ArbitraryWrite.c  ArbitraryWrite.h  BufferOverflowNonPagedPoolNx.c  BufferOverflowPagedPoolSession.c  BufferOverflowPagedPoolSession.h  BufferOverflowStack.c  BufferOverflowStack.h  BufferOverflowStackGS.c  BufferOverflowStackGS.h  CMakeLists.txt  Common.h  DoubleFetch.h  HEVD.crt  HEVD.inf  HackSysExtremeVulnerableDriver.vcxproj  InsecureKernelResourceAccess.c  IntegerOverflow.h  MemoryDisclosureNonPagedPoolNx.c  NullPointerDereference.h  TypeConfusion.h  UninitializedMemoryPagedPool.h  UseAfterFreeNonPagedPool.c  UseAfterFreeNonPagedPool.h  WriteNULL.c
Driver/Source/: ArbitraryOverwrite.c  ArbitraryOverwrite.h  Build_HEVD_Secure.bat  Build_HEVD_Secure_x86.bat  Build_HEVD_Vulnerable.bat  Build_HEVD_Vulnerable_x86.bat  Common.h  HackSysExtremeVulnerableDriver.Win32.vddklaunch  HackSysExtremeVulnerableDriver.c  HackSysExtremeVulnerableDriver.h  HackSysExtremeVulnerableDriver.sln  HackSysExtremeVulnerableDriver.vcxproj  HackSysExtremeVulnerableDriver.vcxproj.filters  IntegerOverflow.c  IntegerOverflow.h  NullPointerDereference.c  NullPointerDereference.h  PoolOverflow.c  PoolOverflow.h  StackOverflow.c  StackOverflow.h  StackOverflowGS.c  StackOverflowGS.h  TypeConfusion.c  TypeConfusion.h  UninitializedHeapVariable.c  UninitializedStackVariable.c  UninitializedStackVariable.h  UninitializedVariable.c  UninitializedVariable.h  sources  (+2 more)
(+146 files in other folders)
